# praisce-flask-api

./: .gitignore  README.md  config.py  database.sql  pyproject.toml  requirements.txt  run.py
api/: __init__.py
api/entidades/: contato.py
api/models/: contato_model.py
api/schemas/: contato_schema.py
api/services/: contato_services.py
api/views/: contato_views.py
