[tool.poetry]
name = "praisce-flask-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "praisce-flask-api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-marshmallow = "^0.15.0"
flask-migrate = "^4.0.4"
mysqlclient = "^2.2.0"
sqlalchemy = "^2.0.19"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
